--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,7 @@ services:
     command: >
         sh -c "python manage.py runserver 0.0.0.0:8000"
 
-
+  db:
+    image: postgres:13-alpine
+    
 
